fix mobile layout bug

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -76,7 +76,6 @@ $circle-size: 4rem;
   text-align: center;
   width: 100%;
   top: $spacing/2;
-  left: $spacing/2;
 }
 
 .circle__backdrop {
@@ -106,7 +105,6 @@ $circle-size: 4rem;
   font-size: 1.35rem;
   margin: 0;
   text-align: center;
-  width: 100%;
 }
 
 .focus {
